<resources>
    <string name="app_name">交通助手</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

    <string name="title_activity_login">登录/注册</string>

    <string name="label_login">登录</string>
    <string name="label_register">注册</string>
    <string name="label_edit_detail">报警信息</string>
    <string name="label_edit_user_info">编辑个人信息</string>
    <string name="label_edit_issue">上报问题</string>
    <string name="label_post_road_jam">拥堵</string>
    <string name="label_post_road_construction">施工</string>
    <string name="label_post_road_close">封路</string>
    <string name="label_post_road_water">积水</string>

    <!--上报问题类型-->
    <string name="issue_kind">问题类型</string>
    <string name="road_jam">拥堵</string>
    <string name="road_water">积水</string>
    <string name="road_close">封路</string>
    <string name="road_construction">施工</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_register">注 册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">无效的用户名</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">需要填写用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_sign_up"><u>注册用户</u></string>
    <string name="action_forget_password"><u>忘记密码</u></string>
    <string name="label_alarm_history">历史报警记录</string>
    <string name="label_user_info">个人信息</string>
    <string name="label_detailed_info">报警记录详情</string>

    <string name="now_loading">正在载入中…</string>
    <string name="now_upload_history">正在上传中…</string>
    <string name="now_user_login">正在登录…</string>
    <string name="now_user_register">注册中…</string>


    <string name="tag_car_type">车辆型号</string>
    <string name="tag_car_type1">危险品车</string>
    <string name="tag_car_type2">中大型车</string>
    <string name="tag_car_type3">小型车</string>

    <string name="tag_people_effect">人员伤亡</string>
    <string name="tag_people_effect1">人员受伤</string>
    <string name="tag_people_effect2">人员死亡</string>
    <string name="tag_people_effect3">较多人员伤亡</string>

    <string name="tag_car_crash">车辆损坏</string>
    <string name="tag_car_crash1">轻微碰擦</string>
    <string name="tag_car_crash2">较少车辆损坏</string>
    <string name="tag_car_crash3">连环碰撞</string>

    <!--编辑用户信息-->
    <string name="pref_edit_user_real_name">车主姓名</string>
    <string name="pref_edit_user_phone_number">手机号</string>
    <string name="pref_edit_user_driver_number">驾驶证号</string>
    <string name="pref_edit_user_driver_type">准驾车型</string>
    <string name="pref_edit_user_car_number">车牌号码</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">设置</string>
</resources>
