<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="个人信息">

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="text"
            android:key="user_real_name"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_edit_user_real_name" />

        <EditTextPreference
            android:capitalize="words"
            android:inputType="number"
            android:key="user_phone_number"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_edit_user_phone_number" />

        <EditTextPreference
            android:capitalize="words"
            android:inputType="text"
            android:key="user_driver_number"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_edit_user_driver_number" />

        <EditTextPreference
            android:capitalize="words"
            android:inputType="text"
            android:key="user_driver_type"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_edit_user_driver_type" />

        <EditTextPreference
            android:capitalize="words"
            android:inputType="text"
            android:key="user_car_number"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_edit_user_car_number" />
    </PreferenceCategory>

</PreferenceScreen>
